--- a/index.html
+++ b/index.html
@@ -58,6 +58,21 @@
     </div>
   </section>
   </div>
+  <main class="main-content">
+    <section class="about-me">
+      <div class="container about-me-container">
+        <div class="about-me-img">
+          <img src="images/about-me/about-image.png" alt="">
+        </div>
+        <div class="about-me-info">
+          <h3 class="about-me-title3">ABOUT ME</h3>
+          <h2 class="about-me-title">I’m RIZO</h2>
+          <p class="about-me-text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                <p class="about-me-text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+        </div>
+      </div>
+    </section>
+  </main>
   <!-- js -->
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
    <script>
