--- a/index.html
+++ b/index.html
@@ -1,82 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RIZO</title>
-  <link rel="icon" href="images/header/logoipsum-282 1.svg">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="site-top" data-aos="flip-right">
-      <header class="site-header">
-    <div class="site-header-container">
-      <a class="logo" data-aos="flip-right" href="/">
-          <img src="images/header/logoipsum-282 1.svg" alt="">
-          <h2>RIZO</h2>
-      </a>
-      <ul data-aos="flip-left" class="sitenav">
-        <li class="sitenav-item">
-          <a class="sitenav-link" href="#">ABOUT</a>
-        </li>
-        <li class="sitenav-item">
-          <a class="sitenav-link" href="#">WHAT I DO</a>
-        </li>
-        <li class="sitenav-item">
-          <a class="sitenav-link" href="#">WORK</a>
-        </li>
-        <li class="sitenav-item">
-          <a class="sitenav-link" href="#">CONTACT</a>
-        </li>
-      </ul>
-    </div>
-  </header>
-  <section class="hero">
-    <div class="hero-container">
-      <h1 class="hero-title">I'm RIZO</h1>
-      <p class="hero-text">Front-End Development - UI/UX Designer</p>
-      <ul data-aos="flip-left" class="socila">
-        <li class="social-item">
-          <a class="social-link" href="https://www.instagram.com/izmir_shop_fabric/" target="_blank">
-            <img src="images/hero/akar-icons_instagram-fill.svg" alt="" height="22" width="22">
-          </a>
-        </li>
-                <li class="social-item">
-          <a class="social-link" href="https://www.facebook.com/" target="_blank">
-            <img src="images/hero/bx_bxl-facebook.svg" alt="" height="22" width="22">
-          </a>
-        </li>
-                <li class="social-item">
-          <a class="social-link" href="https://github.com/" target="_blank">
-            <img src="images/hero/Group.svg" alt="" height="22" width="22">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </section>
-  </div>
-  <main class="main-content">
-    <section class="about-me">
-      <div class="container about-me-container">
-        <div class="about-me-img">
-          <img src="images/about-me/about-image.png" alt="">
-        </div>
-        <div class="about-me-info">
-          <h3 class="about-me-title3">ABOUT ME</h3>
-          <h2 class="about-me-title">I’m RIZO</h2>
-          <p class="about-me-text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-                <p class="about-me-text">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-        </div>
-      </div>
-    </section>
-  </main>
-  <!-- js -->
-   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-   <script>
-  AOS.init();
-</script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>RIZO</title>
+		<link rel="icon" href="images/header/logoipsum-282 1.svg" />
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+			rel="stylesheet" />
+	</head>
+	<body>
+		<div class="site-top" data-aos="flip-right">
+			<header class="site-header">
+				<div class="site-header-container container">
+					<a class="logo" data-aos="flip-right" href="/">
+						<img src="images/header/logoipsum-282 1.svg" alt="" />
+						<h2>RIZO</h2>
+					</a>
+					<ul data-aos="flip-left" class="sitenav">
+						<li class="sitenav-item">
+							<a class="sitenav-link" href="#">ABOUT</a>
+						</li>
+						<li class="sitenav-item">
+							<a class="sitenav-link" href="#">WHAT I DO</a>
+						</li>
+						<li class="sitenav-item">
+							<a class="sitenav-link" href="#">WORK</a>
+						</li>
+						<li class="sitenav-item">
+							<a class="sitenav-link" href="#">CONTACT</a>
+						</li>
+					</ul>
+				</div>
+			</header>
+			<section class="hero">
+				<div class="hero-container">
+					<h1 class="hero-title">I'm RIZO</h1>
+					<p class="hero-text">Front-End Development - UI/UX Designer</p>
+					<ul data-aos="flip-left" class="socila">
+						<li class="social-item">
+							<a class="social-link" href="https://www.instagram.com/izmir_shop_fabric/" target="_blank">
+								<img src="images/hero/akar-icons_instagram-fill.svg" alt="" height="22" width="22" />
+							</a>
+						</li>
+						<li class="social-item">
+							<a class="social-link" href="https://www.facebook.com/" target="_blank">
+								<img src="images/hero/bx_bxl-facebook.svg" alt="" height="22" width="22" />
+							</a>
+						</li>
+						<li class="social-item">
+							<a class="social-link" href="https://github.com/" target="_blank">
+								<img src="images/hero/Group.svg" alt="" height="22" width="22" />
+							</a>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</div>
+		<main class="main-content">
+			<section class="about-me">
+				<div class="container about-me-container">
+					<div class="about-me-img">
+						<img src="images/about-me/about-image.png" alt="" />
+					</div>
+					<div class="about-me-info">
+						<h3 class="overall-title3">ABOUT ME</h3>
+						<h2 class="overall-title">I’m RIZO</h2>
+						<p class="about-me-text">
+							Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+							Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+						</p>
+						<p class="about-me-text">
+							Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+							Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.
+						</p>
+					</div>
+				</div>
+			</section>
+			<section class="what">
+				<div class="container">
+					<div class="what-title-wrapper potfolio-info">
+						<h3 class="overall-title3">WHAT I DO</h3>
+						<h2 class="overall-title what-title">SPECIALIZING IN</h2>
+					</div>
+					<ul class="what-list">
+						<li class="what-item">
+							<div class="what-list-top">
+								<div class="what-pic">
+									<img src="images/what/web-development 1.svg" alt="" />
+								</div>
+								<h3 class="what-title3">Front-end Development</h3>
+							</div>
+							<p class="what-text">Lom ipsum dolo, sit amet consectetu adpisicing elit, rem voluptas sed blanditiis</p>
+						</li>
+						<li class="what-item">
+							<div class="what-list-top">
+								<div class="what-pic">
+									<img src="images/what/ui-design 1.svg" alt="" />
+								</div>
+								<h3 class="what-title3">
+									UI/UX <br />
+									Designer
+								</h3>
+							</div>
+							<p class="what-text">Lom ipsum dolo, sit amet consectetu adpisicing elit, rem voluptas sed blanditiis</p>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="potfolio">
+				<div class="container">
+					<div class="what-title-wrapper">
+						<h3 class="overall-title3">PORTFOLIO</h3>
+						<h2 class="overall-title what-title">LATEST PROJECTS</h2>
+					</div>
+					<ul class="potfolio-list">
+						<li class="potfolio-item">
+							<img src="images/potfolio/portfolio1 1.svg" alt="" />
+              <div class="potfolio-inner">
+                	<h3 class="potfilio-title">Need Food App Design</h3>
+							<a href="#" target="_blank">View Demo</a>
+              </div>
+						</li>
+						<li class="potfolio-item">
+							<img src="images/potfolio/cafestreet-webdesign 1.svg" alt="" />
+              <div class="potfolio-inner">
+                    				<h3 class="potfilio-title">Need Food App Design</h3>
+							<a href="#" target="_blank">View Demo</a>
+              </div>
+						</li>
+						<li class="potfolio-item">
+							<img src="images/potfolio/travel-app-modal1 1.svg" alt="" />
+              <div class="potfolio-inner">
+                 				<h3 class="potfilio-title">Need Food App Design</h3>
+							<a href="#" target="_blank">View Demo</a>
+              </div>
+						</li>
+					</ul>
+				</div>
+			</section>
+		</main>
+		<!-- js -->
+		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+		<script>
+			AOS.init();
+		</script>
+	</body>
 </html>
