--- a/index.html
+++ b/index.html
@@ -122,26 +122,34 @@
 							<img src="images/potfolio/portfolio1 1.svg" alt="" />
               <div class="potfolio-inner">
                 	<h3 class="potfilio-title">Need Food App Design</h3>
-							<a href="#" target="_blank">View Demo</a>
+							<a class="btn" href="#" target="_blank">View Demo</a>
               </div>
 						</li>
 						<li class="potfolio-item">
 							<img src="images/potfolio/cafestreet-webdesign 1.svg" alt="" />
               <div class="potfolio-inner">
-                    				<h3 class="potfilio-title">Need Food App Design</h3>
-							<a href="#" target="_blank">View Demo</a>
+                    				<h3 class="potfilio-title">Cafe Street Web Design</h3>
+							<a class="btn" href="#" target="_blank">View Demo</a>
               </div>
 						</li>
 						<li class="potfolio-item">
 							<img src="images/potfolio/travel-app-modal1 1.svg" alt="" />
               <div class="potfolio-inner">
-                 				<h3 class="potfilio-title">Need Food App Design</h3>
-							<a href="#" target="_blank">View Demo</a>
+                 				<h3 class="potfilio-title">Travel App Design</h3>
+							<a class="btn" href="#" target="_blank">View Demo</a>
               </div>
 						</li>
 					</ul>
 				</div>
 			</section>
+			<!-- main footer -->
+			 <section class="main-footer">
+				<div class="container main-footer-container">
+					<h2 class="main-footer-title">Have any project in mind ?</h2>
+					<a class="btn" href="#">Contact me</a>
+				</div>
+			 </section>
+			 <!-- main end -->
 		</main>
 		<!-- js -->
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
