--- a/index.html
+++ b/index.html
@@ -145,12 +145,18 @@
 			<!-- main footer -->
 			 <section class="main-footer">
 				<div class="container main-footer-container">
-					<h2 class="main-footer-title">Have any project in mind ?</h2>
+					<h2 data-aos="flip-left" class="main-footer-title">Have any project in mind ?</h2>
 					<a class="btn" href="#">Contact me</a>
 				</div>
 			 </section>
 			 <!-- main end -->
 		</main>
+		<footer  class="site-footer">
+			<div class="container site-footer-container">
+				<a class="site-footer-link" href="/"><img src="images/header/logoipsum-282 1.svg" alt=""></a>
+				 <p class="site-footer-text">COPYRIGHT © 2018 CV RAULIQBAL.</p>
+			</div>
+		</footer>
 		<!-- js -->
 		<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 		<script>
